--- a/src/scss/components/_item-ball.scss
+++ b/src/scss/components/_item-ball.scss
@@ -80,6 +80,11 @@ $sizeLg: $trackerBallSize * 2;
   }
   @include media-breakpoint-up(lg) {
     @include generateButton($trackerBallSize * 1.3);
+    &.item-ball-small {
+      .emoji-letter {
+        font-size: 50px !important;
+      }
+    }
   }
 
   .countdown {
